fixed deleteAll and produceNormals bugs

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=517,700
-Size=530,607
+Pos=480,718
+Size=530,419
 Collapsed=1
 
 [Window][Another Window]
@@ -20,13 +20,13 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,20
-Size=370,313
+Size=370,400
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Objects]
-Pos=0,335
-Size=370,465
+Pos=0,422
+Size=370,595
 Collapsed=0
 DockId=0x00000002,0
 
@@ -45,8 +45,8 @@ Size=350,99
 Collapsed=0
 
 [Window][Properties]
-Pos=1199,20
-Size=401,391
+Pos=1519,20
+Size=401,500
 Collapsed=0
 DockId=0x00000007,0
 
@@ -67,18 +67,18 @@ Collapsed=0
 
 [Window][Dockspace]
 Pos=0,0
-Size=1600,800
+Size=1920,1017
 Collapsed=0
 
 [Window][Meshes]
-Pos=1199,413
-Size=401,387
+Pos=1519,522
+Size=401,495
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Materials]
-Pos=0,335
-Size=370,465
+Pos=0,422
+Size=370,595
 Collapsed=0
 DockId=0x00000002,1
 
@@ -104,15 +104,25 @@ Collapsed=0
 
 [Window][Lighting]
 Pos=0,20
-Size=370,313
+Size=370,400
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Camera]
 Pos=0,20
-Size=370,313
+Size=370,400
 Collapsed=0
 DockId=0x00000003,1
+
+[Window][Delete?]
+Pos=669,328
+Size=262,144
+Collapsed=0
+
+[Window][Delete All?]
+Pos=678,362
+Size=262,120
+Collapsed=0
 
 [Table][0x49F8DCEA,3]
 RefScale=16
@@ -208,7 +218,7 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
+DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1920,997 Split=X
   DockNode      ID=0x00000009 Parent=0x1ED03EE2 SizeRef=1197,780 Split=X
     DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=370,780 Split=Y Selected=0xE192E354
       DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=371,313 Selected=0xE192E354
