--- a/imgui.ini
+++ b/imgui.ini
@@ -1,230 +1,68 @@
-[Window][Debug##Default]
-Pos=189,117
-Size=1251,720
-Collapsed=0
-
-[Window][Hello, world!]
-Pos=12,13
-Size=373,404
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=480,718
-Size=530,419
-Collapsed=1
-
-[Window][Another Window]
-Pos=60,60
-Size=198,71
-Collapsed=0
-
-[Window][Scene]
-Pos=0,20
-Size=370,400
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Objects]
-Pos=0,422
-Size=370,595
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][DockSpace Demo]
-Size=1600,800
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=777,17
-Size=485,450
-Collapsed=0
-
-[Window][Main]
-Pos=14,9
-Size=350,99
-Collapsed=0
-
-[Window][Properties]
-Pos=1519,20
-Size=401,500
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Rendering]
-Pos=1199,20
-Size=401,391
-Collapsed=0
-DockId=0x00000007,1
-
-[Window][DockSpace]
-Size=1600,800
-Collapsed=0
-
-[Window][Current Scene]
-Pos=0,20
-Size=372,253
-Collapsed=0
-
 [Window][Dockspace]
 Pos=0,0
-Size=1920,1017
+Size=1600,800
 Collapsed=0
 
-[Window][Meshes]
-Pos=1519,522
-Size=401,495
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Materials]
-Pos=0,422
-Size=370,595
-Collapsed=0
-DockId=0x00000002,1
-
-[Window][Example: Simple layout]
-Pos=494,78
-Size=500,440
-Collapsed=0
-
-[Window][Stacked 1]
-Pos=543,248
-Size=381,200
-Collapsed=0
-
-[Window][Stacked 2]
-Pos=694,360
-Size=211,80
-Collapsed=0
-
-[Window][Example: Documents]
-Pos=439,36
-Size=608,794
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
 Collapsed=0
 
 [Window][Lighting]
 Pos=0,20
-Size=370,400
+Size=370,349
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x00000007,2
 
 [Window][Camera]
 Pos=0,20
-Size=370,400
+Size=370,349
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000007,1
 
-[Window][Delete?]
-Pos=669,328
-Size=262,144
+[Window][Scene]
+Pos=0,20
+Size=370,349
 Collapsed=0
+DockId=0x00000007,0
 
-[Window][Delete All?]
-Pos=678,362
-Size=262,120
+[Window][Materials]
+Pos=0,371
+Size=370,429
 Collapsed=0
+DockId=0x00000008,1
 
-[Table][0x49F8DCEA,3]
-RefScale=16
-Column 0  Weight=1.0000
-Column 1  Width=108
-Column 2  Width=162
+[Window][Objects]
+Pos=0,371
+Size=370,429
+Collapsed=0
+DockId=0x00000008,0
 
-[Table][0x8DFA6E86,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+[Window][Meshes]
+Pos=1205,390
+Size=395,410
+Collapsed=0
+DockId=0x00000005,0
 
-[Table][0xFABAAEF7,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+[Window][Properties]
+Pos=1205,20
+Size=395,368
+Collapsed=0
+DockId=0x00000004,0
 
-[Table][0x47600645,3]
-RefScale=16
-Column 0  Width=54
-Column 1  Width=54
-Column 2  Weight=1.0000
-
-[Table][0xDE6957FF,6]
-RefScale=16
-Column 0  Width=54
-Column 1  Width=54
-Column 2  Width=-1
-Column 3  Weight=1.0000
-Column 4  Weight=1.0000
-Column 5  Weight=-1.0000
-
-[Table][0xC9935533,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-
-[Table][0xC179E37C,3]
-RefScale=16
-Column 0  Width=113 Sort=0v
-Column 1  Width=61
-Column 2  Width=-1
-
-[Table][0xA43C3885,3]
-RefScale=16
-Column 0  Width=45
-Column 1  Width=45
-Column 2  Width=45
-
-[Table][0x20DF7A63,4]
-RefScale=16
-Column 0  Width=31 Sort=0v
-Column 1  Width=51
-Column 2  Width=41
-Column 3  Weight=1.0000
-
-[Table][0x9B8E7538,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-
-[Table][0x82CBB907,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-
-[Table][0x49D11DC0,3]
-RefScale=16
-Column 0  Width=69
-Column 1  Width=69
-Column 2  Width=69
-
-[Table][0xDA36A7E0,6]
-RefScale=16
-Column 0  Width=31 Sort=0v
-Column 1  Width=51
-Column 2  Width=76
-Column 3  Width=65
-Column 4  Weight=1.0000
-Column 5  Width=-1
-
-[Table][0x45A0E60D,7]
-RefScale=16
-Column 0  Width=45
-Column 1  Width=98
-Column 2  Width=98
-Column 3  Width=98
-Column 4  Width=98
-Column 5  Width=98
-Column 6  Width=98
-
-[Table][0xE0773582,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
+[Window][Dear ImGui Demo]
+Pos=453,676
+Size=550,680
+Collapsed=1
 
 [Docking][Data]
-DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1920,997 Split=X
-  DockNode      ID=0x00000009 Parent=0x1ED03EE2 SizeRef=1197,780 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=370,780 Split=Y Selected=0xE192E354
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=371,313 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=371,465 Selected=0x967E7699
-    DockNode    ID=0x00000004 Parent=0x00000009 SizeRef=825,780 CentralNode=1
-  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=401,780 Split=Y Selected=0x5B3C8097
-    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=613,304 Selected=0x199AB496
-    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=613,301 Selected=0x4A7568CE
+DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
+  DockNode      ID=0x00000001 Parent=0x1ED03EE2 SizeRef=370,780 Split=Y Selected=0x36FF2379
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=498,349 Selected=0xE192E354
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=498,429 Selected=0x967E7699
+  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=1245,780 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=848,780 CentralNode=1
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=395,780 Split=Y Selected=0x199AB496
+      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=194,368 Selected=0x199AB496
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=194,410 Selected=0x4A7568CE
 
