--- a/imgui.ini
+++ b/imgui.ini
@@ -58,7 +58,7 @@ Collapsed=1
 [Docking][Data]
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x00000001 Parent=0x1ED03EE2 SizeRef=370,780 Split=Y Selected=0x36FF2379
-    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=498,349 Selected=0xE192E354
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=498,349 Selected=0x36FF2379
     DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=498,429 Selected=0x967E7699
   DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=1245,780 Split=X
     DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=848,780 CentralNode=1
